# Static-Program-Analyzer

./: .gitignore  README.md
Team25/Code25/: .gitignore
Team25/Code25/lib/: catch.hpp
Team25/Code25/src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
Team25/Code25/src/autotester_gui/src/: codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h
Team25/Code25/src/integration_testing/: CMakeLists.txt
Team25/Code25/src/integration_testing/src/: TestQpsPkbIntegration.cpp  TestSPAIntegration.cpp  TestSpPkbIntegration.cpp
Team25/Code25/src/spa/: CMakeLists.txt
Team25/Code25/src/unit_testing/: CMakeLists.txt
Team25/Tests25/integration_testing/: anya_source.txt  basic_source.txt  multi_procedures_source.txt
Team25/Tests25/sample/: test_query.txt  test_source.txt
Team25/Tests25/system_testing/: README.md
Team25/Tests25/system_testing/milestone_1/valid/: basic_out.txt  basic_out.xml  basic_query.txt  basic_source.txt  ci_run.sh  deep_nesting_out.xml  deep_nesting_query.txt  deep_nesting_source.txt  odd_out.xml  odd_query.txt  odd_source.txt  run.sh
Team25/Tests25/system_testing/milestone_2/basic_select/: ci_run.sh  run.sh  select_BOOLEAN_basic_tests_out.xml  select_BOOLEAN_basic_tests_queries.txt  select_BOOLEAN_basic_tests_source.txt
Team25/Tests25/system_testing/milestone_2/invalid_queries/: ci_run.sh  invalid_semantic_queries.txt  invalid_semantic_queries_out.xml  invalid_syntax_queries.txt  invalid_syntax_queries_out.xml  invalid_syntax_queries_source.txt  run.sh
Team25/Tests25/system_testing/milestone_2/valid/: run.sh  (+3 more)
(+382 files in other folders)
