file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_executable(integration_testing ${srcs})
target_link_libraries(integration_testing spa)
add_compile_definitions(INTEGRATION_TESTING_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../../../Tests25/integration_testing/")
